feat: create index endpoint to fetch user sleep records
