# app/controllers/v1/sleep_records_controller.rb
@@ -3,8 +3,20 @@ class V1::SleepRecordsController < ApplicationController
 
   def initialize
     super
+    @user_fetch_sleep_record = Container["use_cases.user_fetch_sleep_record"]
     @user_clock_in = Container["use_cases.user_clock_in"]
     @user_clock_out = Container["use_cases.user_clock_out"]
+  end
+
+  def index
+    result = @user_fetch_sleep_record.call(params.permit(:user_id, :sort_by, :sort_direction).to_h)
+    handle_result(result) do |response|
+      render json: {
+        data: response,
+        message: "Successfully fetched sleep records",
+        status: "success"
+      }, status: :ok
+    end
   end
 
   def clock_in
